--- a/BooKtebi/package.json
+++ b/BooKtebi/package.json
@@ -29,6 +29,7 @@
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "bootstrap": "^4.5.0",
     "rxjs": "~6.6.0",
+    "tailwindcss": "^2.1.1",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.3"
   },
