--- a/BooKtebi/angular.json
+++ b/BooKtebi/angular.json
@@ -33,8 +33,8 @@
               "node_modules/@fortawesome/fontawesome-free/scss/brands.scss",
               "node_modules/angular-bootstrap-md/assets/scss/bootstrap/bootstrap.scss",
               "node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
-              "node_modules/animate.css/animate.css",
-              "src/styles.scss"
+              "node_modules/animate.css/animate.css"
+
             ],
             "scripts": [
               "node_modules/chart.js/dist/Chart.js",
