--- a/BooKtebi/package.json
+++ b/BooKtebi/package.json
@@ -34,6 +34,8 @@
     "bootstrap": "^4.5.0",
     "chart.js": "^2.5.0",
     "hammerjs": "^2.0.8",
+    "ngx-page-scroll": "^7.0.4",
+    "ngx-page-scroll-core": "^7.0.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.3"
