--- a/BooKtebi/package.json
+++ b/BooKtebi/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser": "~11.2.3",
     "@angular/platform-browser-dynamic": "~11.2.3",
     "@angular/router": "~11.2.3",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
     "@fortawesome/angular-fontawesome": "^0.8.2",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
@@ -31,13 +33,12 @@
     "@types/chart.js": "^2.9.32",
     "angular-bootstrap-md": "^11.0.0",
     "animate.css": "^4.1.1",
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^4.6.0",
     "chart.js": "^2.5.0",
     "hammerjs": "^2.0.8",
     "ngx-page-scroll": "^7.0.4",
     "ngx-page-scroll-core": "^7.0.3",
     "rxjs": "~6.6.0",
-    "tailwindcss": "^2.1.1",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.3"
   },
@@ -48,6 +49,7 @@
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "angular-cli-ghpages": "^1.0.0-rc.1",
+    "autoprefixer": "^10.2.5",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -56,10 +58,13 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "postcss": "^8.2.10",
+    "postcss-loader": "^3.0.0",
     "prettier": "2.2.1",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "vue-template-compiler": "^2.6.12"
   }
 }
